read and process HID events

--- a/index.html
+++ b/index.html
@@ -10,26 +10,50 @@
 <div class="app__container group">
   <div class="app__keyboard-container group">
     <ul class="app__pages group">
-      <li class="app__page"><a class="app__page-link app__page-link-1" href="#">1</a></li>
-      <li class="app__page"><a class="app__page-link app__page-link-2" href="#">2</a></li>
-      <li class="app__page"><a class="app__page-link app__page-link-3" href="#">3</a></li>
-      <li class="app__page"><a class="app__page-link app__page-link-4" href="#">4</a></li>
+      <li class="app__page"><a class="app__page-link active-page" href="#" data-page="0" id="page-0">
+        <span>
+          <span>1</span>
+        <span class="app__page-link-1">▂</span>
+        </span>
+      </a>
+      </li>
+      <li class="app__page"><a class="app__page-link" href="#" data-page="1" id="page-1">
+        <span>
+          <span>2</span>
+        <span class="app__page-link-2">▂</span>
+        </span>
+      </a>
+      </li>
+      <li class="app__page"><a class="app__page-link" href="#" data-page="2" id="page-2">
+        <span>
+          <span>3</span>
+          <span class="app__page-link-3">▂</span>
+        </span>
+      </a>
+      </li>
+      <li class="app__page"><a class="app__page-link" href="#" data-page="3" id="page-3">
+        <span>
+          <span>4</span>
+          <span class="app__page-link-4">▂</span>
+        </span>
+      </a>
+      </li>
     </ul>
     <div class="app__keyboard-buttons group">
       <li class="app__keyboard-button-columm column-left">
-        <a class="app__keyboard-button-link" href="#"></a>
-        <a class="app__keyboard-button-link" href="#"></a>
-        <a class="app__keyboard-button-link" href="#"></a>
+        <a class="app__keyboard-button-link" href="#" id="btn-0"></a>
+        <a class="app__keyboard-button-link" href="#" id="btn-3"></a>
+        <a class="app__keyboard-button-link" href="#" id="btn-6"></a>
       </li>
       <li class="app__keyboard-button-columm column-center">
-        <a class="app__keyboard-button-link" href="#"></a>
-        <a class="app__keyboard-button-link" href="#"></a>
-        <a class="app__keyboard-button-link" href="#"></a>
+        <a class="app__keyboard-button-link" href="#" id="btn-1"></a>
+        <a class="app__keyboard-button-link" href="#" id="btn-4"></a>
+        <a class="app__keyboard-button-link" href="#" id="btn-7"></a>
       </li>
       <li class="app__keyboard-button-columm column-right group">
-        <a class="app__keyboard-button-link" href="#"></a>
-        <a class="app__keyboard-button-link" href="#"></a>
-        <a class="app__keyboard-button-link" href="#"></a>
+        <a class="app__keyboard-button-link" href="#" id="btn-2"></a>
+        <a class="app__keyboard-button-link" href="#" id="btn-5"></a>
+        <a class="app__keyboard-button-link" href="#" id="btn-8"></a>
       </li>
     </div>
   </div>
