--- a/index.html
+++ b/index.html
@@ -41,20 +41,28 @@
     </ul>
     <div class="app__keyboard-buttons group">
       <li class="app__keyboard-button-columm column-left">
-        <a class="app__keyboard-button-link" href="#" id="btn-0"></a>
-        <a class="app__keyboard-button-link" href="#" id="btn-3"></a>
-        <a class="app__keyboard-button-link" href="#" id="btn-6"></a>
+        <a class="app__keyboard-button-link" href="#" id="btn-0" data-button="0"></a>
+        <a class="app__keyboard-button-link" href="#" id="btn-3" data-button="3"></a>
+        <a class="app__keyboard-button-link" href="#" id="btn-6" data-button="6"></a>
       </li>
       <li class="app__keyboard-button-columm column-center">
-        <a class="app__keyboard-button-link" href="#" id="btn-1"></a>
-        <a class="app__keyboard-button-link" href="#" id="btn-4"></a>
-        <a class="app__keyboard-button-link" href="#" id="btn-7"></a>
+        <a class="app__keyboard-button-link" href="#" id="btn-1" data-button="1"></a>
+        <a class="app__keyboard-button-link" href="#" id="btn-4" data-button="4"></a>
+        <a class="app__keyboard-button-link" href="#" id="btn-7" data-button="7"></a>
       </li>
       <li class="app__keyboard-button-columm column-right group">
-        <a class="app__keyboard-button-link" href="#" id="btn-2"></a>
-        <a class="app__keyboard-button-link" href="#" id="btn-5"></a>
-        <a class="app__keyboard-button-link" href="#" id="btn-8"></a>
+        <a class="app__keyboard-button-link" href="#" id="btn-2" data-button="2"></a>
+        <a class="app__keyboard-button-link" href="#" id="btn-5" data-button="5"></a>
+        <a class="app__keyboard-button-link" href="#" id="btn-8" data-button="8"></a>
       </li>
+    </div>
+  </div>
+  <div id="popup" class="app__popup-overlay">
+    <div class="popup group">
+      <a id="close" href="#" class="close-btn">&times;</a>
+      <div class="popup-content" id="popup-content">
+
+      </div>
     </div>
   </div>
 </div>
