implement shortcut writing

--- a/index.html
+++ b/index.html
@@ -59,9 +59,12 @@
   </div>
   <div id="popup" class="app__popup-overlay">
     <div class="popup group">
-      <a id="close" href="#" class="close-btn">&times;</a>
-      <div class="popup-content" id="popup-content">
-
+      <p class="app__popup-msg">Enter your combination here, one key at a time</p>
+      <div class="popup-content" id="popup-content"></div>
+      <div class="popup-buttons-container">
+        <a href="#" id="button-ok" class="app__popup-button">OK</a>
+        <a href="#" id="button-clear" class="app__popup-button">Clear</a>
+        <a href="#" id="button-cancel" class="app__popup-button">Cancel</a>
       </div>
     </div>
   </div>
