--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Palette</title>
   <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans|Tajawal:300" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="app.scss">
+  <link rel="stylesheet" type="text/css" href="css/app.css">
 </head>
 <body>
 <div class="app__container group">
@@ -71,7 +71,7 @@
 </div>
 <script>
   // You can also require other files to run in this process
-  require('./renderer.js')
+  require('./src/renderer.js')
 </script>
 </body>
 </html>
