--- a/index.html
+++ b/index.html
@@ -9,54 +9,57 @@
 <body>
 <div class="app__container group">
   <div class="app__keyboard-container group">
-    <ul class="app__pages group">
-      <li class="app__page"><a class="app__page-link active-page" href="#" data-page="0" id="page-0">
+    <div id="device-unplugged-layout" class="app__device-unplugged">No device connected. Please plug your device</div>
+    <div id="device-plugged-layout">
+      <ul class="app__pages group">
+        <li class="app__page"><a class="app__page-link active-page" href="#" data-page="0" id="page-0">
         <span>
           <span>1</span>
         <span class="app__page-link-1">▂</span>
         </span>
-      </a>
-      </li>
-      <li class="app__page"><a class="app__page-link" href="#" data-page="1" id="page-1">
+        </a>
+        </li>
+        <li class="app__page"><a class="app__page-link" href="#" data-page="1" id="page-1">
         <span>
           <span>2</span>
         <span class="app__page-link-2">▂</span>
         </span>
-      </a>
-      </li>
-      <li class="app__page"><a class="app__page-link" href="#" data-page="2" id="page-2">
+        </a>
+        </li>
+        <li class="app__page"><a class="app__page-link" href="#" data-page="2" id="page-2">
         <span>
           <span>3</span>
           <span class="app__page-link-3">▂</span>
         </span>
-      </a>
-      </li>
-      <li class="app__page"><a class="app__page-link" href="#" data-page="3" id="page-3">
+        </a>
+        </li>
+        <li class="app__page"><a class="app__page-link" href="#" data-page="3" id="page-3">
         <span>
           <span>4</span>
           <span class="app__page-link-4">▂</span>
         </span>
-      </a>
-      </li>
-    </ul>
-    <div class="app__keyboard-buttons group">
-      <li class="app__keyboard-button-columm column-left">
-        <a class="app__keyboard-button-link" href="#" id="btn-0" data-button="0"></a>
-        <a class="app__keyboard-button-link" href="#" id="btn-3" data-button="3"></a>
-        <a class="app__keyboard-button-link" href="#" id="btn-6" data-button="6"></a>
-      </li>
-      <li class="app__keyboard-button-columm column-center">
-        <a class="app__keyboard-button-link" href="#" id="btn-1" data-button="1"></a>
-        <a class="app__keyboard-button-link" href="#" id="btn-4" data-button="4"></a>
-        <a class="app__keyboard-button-link" href="#" id="btn-7" data-button="7"></a>
-      </li>
-      <li class="app__keyboard-button-columm column-right group">
-        <a class="app__keyboard-button-link" href="#" id="btn-2" data-button="2"></a>
-        <a class="app__keyboard-button-link" href="#" id="btn-5" data-button="5"></a>
-        <a class="app__keyboard-button-link" href="#" id="btn-8" data-button="8"></a>
-      </li>
+        </a>
+        </li>
+      </ul>
+      <div class="app__keyboard-buttons group">
+        <li class="app__keyboard-button-columm column-left">
+          <a class="app__keyboard-button-link" href="#" id="btn-0" data-button="0"></a>
+          <a class="app__keyboard-button-link" href="#" id="btn-3" data-button="3"></a>
+          <a class="app__keyboard-button-link" href="#" id="btn-6" data-button="6"></a>
+        </li>
+        <li class="app__keyboard-button-columm column-center">
+          <a class="app__keyboard-button-link" href="#" id="btn-1" data-button="1"></a>
+          <a class="app__keyboard-button-link" href="#" id="btn-4" data-button="4"></a>
+          <a class="app__keyboard-button-link" href="#" id="btn-7" data-button="7"></a>
+        </li>
+        <li class="app__keyboard-button-columm column-right group">
+          <a class="app__keyboard-button-link" href="#" id="btn-2" data-button="2"></a>
+          <a class="app__keyboard-button-link" href="#" id="btn-5" data-button="5"></a>
+          <a class="app__keyboard-button-link" href="#" id="btn-8" data-button="8"></a>
+        </li>
+      </div>
     </div>
-  </div>
+    </div>
   <div id="popup" class="app__popup-overlay">
     <div class="popup group">
       <p class="app__popup-msg">Enter your combination here, one key at a time</p>
