add bootloader window

--- a/index.html
+++ b/index.html
@@ -58,8 +58,11 @@
           <a class="app__keyboard-button-link" href="#" id="btn-8" data-button="8"></a>
         </li>
       </div>
+      <div class="app__update-msg-container">
+        <small id="update-message" class="app__update-msg">A new version of Palitra firmware is available. Please click <a href="#" id="update-link" class="app__update-msg-link">here</a> to update.</small>
+      </div>
     </div>
-    </div>
+  </div>
   <div id="popup" class="app__popup-overlay">
     <div class="popup group">
       <p class="app__popup-msg">Enter your combination here, one key at a time</p>
