add firmware loading

--- a/update.html
+++ b/update.html
@@ -8,8 +8,9 @@
 </head>
 <body>
 <div class="app__container group">
-  <div class="app__keyboard-container group">
-    <a href="#" id="close-upd-window" class="app__popup-button">Close update window</a>
+  <div class="app__keyboard-container app__update-buttons group">
+    <a href="#" id="start-upd" class="app__upd-button">Start update</a>
+    <a href="#" id="close-upd-window" class="app__upd-button">Close update window</a>
   </div>
 </div>
 <script>
